--- a/src/bin/exrcheck/CMakeLists.txt
+++ b/src/bin/exrcheck/CMakeLists.txt
@@ -6,7 +6,9 @@ target_link_libraries(exrcheck OpenEXR::OpenEXR OpenEXR::OpenEXRUtil)
 set_target_properties(exrcheck PROPERTIES
   RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
 )
-# install(TARGETS exrcheck DESTINATION ${CMAKE_INSTALL_BINDIR})
+if(OPENEXR_INSTALL_TOOLS)
+  install(TARGETS exrcheck DESTINATION ${CMAKE_INSTALL_BINDIR})
+endif()
 if(WIN32 AND BUILD_SHARED_LIBS)
   target_compile_definitions(exrcheck PRIVATE OPENEXR_DLL)
 endif()
